Fix issue with container not scrolling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,8 @@ body.modal-open {
   touch-action: none;
   -ms-touch-action: none;
 }
+
+.touch-scroll {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
